2013-09-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* string/test-memrchr.c: New file.
	* string/test-memrchr-ifunc.c: New file.
	* string/Makefile: Add new memrchr testcase.

2013-09-05  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/tst-fanotify.c (do_test): Skip test when
	fanotify_init returns EPERM.

2013-09-04  Joseph Myers  <joseph@codesourcery.com>

	* conform/conformtest.pl (newtoken): Treat tokens not allowed as
	errors.
	(top level): Treat second token from macro or constant entries for
	allowed headers as allowed.
	* include/complex.h: Condition internal declarations on
	[!_ISOMAC].
	* include/fenv.h: Condition include of <stdbool.h> and internal
	declarations on [!_ISOMAC].

2013-09-04  Chris Leonard  <cjl@sugarlabs,.org>

     [BZ #15923]
	* locale/iso-4217.def: Update iso-1427.def and related occurrences.

2013-09-04  Joseph Myers  <joseph@codesourcery.com>

	* configure.in (--enable-versioning): Remove configure option.
	(libc_cv_asm_symver_directive): Remove configure test.
	(libc_cv_ld_version_script_option): Likewise.
	(VERSIONING): Remove variable and AC_SUBST.
	(DO_VERSIONING): Remove AC_DEFINE.
	* configure: Regenerated.
	* config.h.in (DO_VERSIONING): Remove macro.
	* Makerules [$(versioning) = yes]: Change conditionals to
	[$(build-shared) = yes].
	* config.make.in (versioning): Remove variable.
	* dlfcn/Makefile [$(versioning) = yes]: Change conditionals to
	[$(build-shared) = yes].
	* dlfcn/modstatic2.c (test) [DO_VERSIONING]: Remove conditional.
	* dlfcn/tststatic2.c (main) [DO_VERSIONING]: Likewise.
	* elf/Makefile [$(versioning) = yes]: Change conditionals to
	[$(build-shared) = yes].
	* extra-lib.mk [$(versioning) = yes]: Likewise.
	* hurd/Makefile [$(versioning) = yes]: Likewise.
	* hurd/geteuids.c [SHARED && DO_VERSIONING]: Change conditional to
	[SHARED].
	* include/libc-symbols.h [DO_VERSIONING]: Change conditional to
	[SHARED].
	[SHARED && DO_VERSIONING && !NO_HIDDEN]: Change conditional to